--- a/1-screening.tex
+++ b/1-screening.tex
@@ -268,6 +268,21 @@ In this section, we will try to see how we can apply the above-mentioned screeni
 
 The industrial interest for noble gases lies first and foremost in the many applications attached to them. For instance, xenon has multiple applications in the medical (e.g.\ anesthesia, painkiller, imaging),\cite{cullen1951anesthetic, holstrater2011intranasal,Mammarappallil_2019} aeronautical\cite{Patterson_2002,Coxhill_2005}, lithographic\cite{Abramov_2018}, microelectronic\cite{Chang_1995} or lighting sectors,\cite{Jarman_1974,Tanaka_2019} just to cite a few. To meet the demand for these noble gases, one should consider all available sources, the most obvious one being the air we breathe. Xenon and krypton have both very low atmospheric concentrations; out of a thousand liters of air we would extract at most one-tenth of a milliliter of xenon and one of krypton.\cite{kerry2007industrial} Nevertheless, direct extraction from the air remains the main production mean for xenon and krypton along with chemical plant off-gases that contains a higher concentration of inert gas (e.g. amonia purge gas). In these cases, the industry more commonly uses cryogenic distillation to extract xenon and krypton, which requires a compression and cooling of the gas mixture at very low temperatures. The separation process can be broken down into three steps: first the condensation of all gas with a boiling point higher than the oxygen, then the purification of oxygen resulting in a 20-80 xenon/krypton mixture, and finally the separation of xenon from krypton. In 1997, several cases of explosion of separation units were caused by the reaction of non-filtered dangerous hydrocarbons with purified liquid oxygen produced in the second step of this long process.\cite{distill_accident,distill_accident2} The extreme chemical and physical conditions required for cryogenic distillation support the need for less energy-intensive and safer alternatives. 
 
+\setlength{\extrarowheight}{0.1cm}
+\begin{table}[ht]
+\begin{tabular}{|l|r|}
+\hline
+ Industrial application  &  Xe/Kr composition  \\
+\hline
+ Extraction from ambient air\cite{kerry2007industrial} &  20/80  \\[0.5mm]
+ Spent nuclear fuel\cite{auerbach2003handbook} &  90/10  \\[0.5mm]
+ Molten Salt Reactor\cite{Riley_2019} &  ? \\[0.5mm]
+\hline
+\end{tabular}
+\caption{Nature of the Xe/Kr mixture in different applications.}
+\label{tab:indus_app}
+\end{table}
+
 The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms on this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\cite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\cite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\cite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\cite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
 
 \begin{figure}[ht]
