--- a/thesis.bib
+++ b/thesis.bib
@@ -2598,3 +2598,21 @@ for Global Competitiveness},
   title = {The Monte Carlo Method},
   journal = {Journal of the American Statistical Association}
 }
+@misc{github_simon_gcmc,
+  title = {Computing the heat of adsorption in a grand canonical Monte Carlo simulation},
+  year={2016},
+  author = {Cory Simon},
+  editor = {github},
+  note = { Available online at \url{http://corysimon.github.io/articles/hoa/}},
+  lastchecked = {2023-05-03}
+}
+@article{dubbeldam2016,
+  title={RASPA: molecular simulation software for adsorption and diffusion in flexible nanoporous materials},
+  author={Dubbeldam, David and Calero, Sof{\'\i}a and Ellis, Donald E and Snurr, Randall Q},
+  journal={Mol. Simulat.},
+  volume={42},
+  number={2},
+  pages={81--101},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
